# toma

./: .gitignore  README.md  pyproject.toml  starter.ipynb
tests/: test_configs.py  test_dgp.py  test_metrics.py
toma/: __init__.py  configs.py  dgp.py  metrics.py
