[project]
name = "toma"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "scikit-learn",
    "matplotlib",
    "cmcrameri",
    "notebook",
    "ipykernel",
    "overcomplete @ git+https://github.com/KempnerInstitute/overcomplete",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
]
